--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Concorde
+*.graph
+*.msa
+*.res
+*.sol
+
+# Poetry
+poetry.lock
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -14,7 +23,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
